kitten/reported_bugs/rust/rust-77919/stderr.txt
error[E0412]: cannot find type `VAL` in this scope

  --> mutant.rs:17:21

   |

16 | impl < N , M > TypeVal < usize > for Multiply < N , M >

   |             - help: you might be missing a type parameter: `, VAL`

17 | where N : TypeVal < VAL > ,

   |                     ^^^ not found in this scope



error: internal compiler error: compiler/rustc_trait_selection/src/traits/codegen/mod.rs:121:9: Encountered errors `[FulfillmentError(Obligation(predicate=TraitPredicate(<Five as TypeVal<[type error]>>), depth=1),Ambiguity)]` resolving bounds after type-checking



thread 'rustc' panicked at 'Box<Any>', compiler/rustc_errors/src/lib.rs:945:9

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.49.0-nightly (8dae8cdcc 2020-10-12) running on x86_64-unknown-linux-gnu



note: compiler flags: -C debuginfo=2 -C opt-level=1 -C target-cpu=skylake --crate-type staticlib



error: aborting due to 2 previous errors



For more information about this error, try `rustc --explain E0412`.

